fix: another overlapping fix

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -42,6 +42,7 @@
 .personallinks {
   float:right;
   z-index:1;
+  position:relative;
 
   li {
     margin-right: 1em;
